WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67791
HTMLMediaElement is missing initialTime attribute
https://bugs.webkit.org/show_bug.cgi?id=67791
Summary
HTMLMediaElement is missing initialTime attribute
Eric Carlson
Reported
2011-09-08 11:12:08 PDT
The media element does not implement the initialTime IDL attribute:
http://www.w3.org/TR/html5/video.html#dom-media-initialtime
Attachments
Proposed patch
(6.06 KB, patch)
2011-09-08 11:43 PDT
,
Eric Carlson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2011-09-08 11:12:56 PDT
<
rdar://problem/10094619
>
Eric Carlson
Comment 2
2011-09-08 11:43:44 PDT
Created
attachment 106769
[details]
Proposed patch
Eric Carlson
Comment 3
2011-09-08 13:19:39 PDT
http://trac.webkit.org/changeset/94787
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug