HTMLMediaElement is missing initialTime attribute https://bugs.webkit.org/show_bug.cgi?id=67791

Reviewed by Darin Adler.

Source/WebCore:

Test: media/media-initialTime.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::initialTime):
* html/HTMLMediaElement.h:
* html/HTMLMediaElement.idl:
* platform/graphics/MediaPlayer.cpp:
(WebCore::MediaPlayer::initialTime):
* platform/graphics/MediaPlayer.h:
* platform/graphics/MediaPlayerPrivate.h:
(WebCore::MediaPlayerPrivateInterface::initialTime):

LayoutTests:

* media/media-initialTime-expected.txt: Added.
* media/media-initialTime.html: Added.


Canonical link: https://commits.webkit.org/83681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94787 268f45cc-cd09-0410-ab3c-d52691b4dbfc