Source/WebCore/platform/graphics/MediaPlayer.h
@@ -234,6 +234,8 @@ public:
 
     float startTime() const;
 
+    double initialTime() const;
+
     float rate() const;
     void setRate(float);
 
